<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_amplitude_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_zero_margin"
    android:paddingRight="@dimen/activity_zero_margin"
    android:paddingTop="@dimen/activity_zero_margin"
    tools:context="com.example.triante.translatingheadsetapp.AmplitudeSettingsActivity">

    <TextView
        android:text="@string/amplitude_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_option_title"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textSize="35sp"/>

    <TextView
        android:text="@string/amplitude_settings_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView6" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        app:srcCompat="@drawable/divider_horizontal"
        android:layout_below="@+id/textView6"
        android:id="@+id/imageView" />

    <Button
        android:text="@string/button_amplitude_record"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_amplitude_option"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:id="@+id/bRecordAmplitude"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/amplitude_settings_button"
        android:gravity="top|start"/>

    <TextView
        android:text="@string/amplitude_settings_amplitude_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/height_spinner_label"
        android:layout_marginTop="5dp"
        android:layout_alignBottom="@+id/bRecordAmplitude"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/bRecordAmplitude" />

    <Button
        android:text="@string/button_amplitude_configure"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_amplitude_option"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:id="@+id/bConfigAmplitude"
        android:layout_below="@+id/bRecordAmplitude"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/amplitude_settings_button"
        android:gravity="top|start"/>

    <TextView
        android:text="@string/amplitude_settings_amplitude_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/height_spinner_label"
        android:layout_marginTop="5dp"
        android:layout_alignBottom="@+id/bConfigAmplitude"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/bConfigAmplitude" />

    <Button
        android:text="@string/button_amplitude_done"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_amplitude_option"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:layout_below="@+id/bConfigAmplitude"
        android:background="@drawable/amplitude_settings_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/bDoneAmplitude"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="top"
        android:visibility="invisible"
        android:clickable="false"/>

    <TextView
        android:text="@string/amplitude_settings_amplitude_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/height_spinner_label"
        android:layout_marginTop="5dp"
        android:layout_alignBottom="@+id/bDoneAmplitude"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/text_done"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/bDoneAmplitude"
        android:visibility="invisible"/>

    <!--Sliders and Progress Bars-->

    <TextView
        android:text="@string/amplitude_settings_current_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:id="@+id/textView10"
        android:layout_above="@+id/seekBar_threshold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar_threshold"
        android:layout_toRightOf="@+id/textView10"
        android:layout_toEndOf="@+id/textView10"
        android:id="@+id/text_current" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/seekBar_threshold"
        android:layout_above="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:theme="@style/_seek_bar_theme"
        />


    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/seekBar_max"
        android:layout_above="@+id/amplitude_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:theme="@style/_seek_bar_theme"
        />

    <TextView
        android:text="@string/amplitude_settings_max_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:id="@+id/textView9"
        android:layout_above="@+id/seekBar_max"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar_max"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9"
        android:id="@+id/text_max" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/amplitude_bar"
        android:progressDrawable="@drawable/amplitude_progress_style"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bDoneAmplitude"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView10">
            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginBottom="15dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_microphone"
                android:layout_centerInParent="true"
                android:id="@+id/imageMic" />
    </RelativeLayout>


</RelativeLayout>
